# conda

repo_cli/commands/: base.py  config.py  copy.py  move.py
repo_cli/plugin/: pyproject.toml  setup.py
repo_cli/tests/: test_config.yaml
repo_cli/tests/integration/: test_auth.py  test_channels.py  test_packages.py
repo_cli/tests/integration/fixtures/: channels.json  create_channel.json  get_artifacts_conda_numpy.json  get_subchannel_1234.json  get_subchannel_artifacts.json  lock_subchannel.json  scopes.json  tokens.json  upload_channel_john.json
repo_cli/tests/jenkins/: repo-cli-integration-tests.jenkinsfile
repo_cli/tests/unit/test_utils/: test_format.py
repo_cli/utils/: config.py  detect.py
tmp/: pyproject.toml  repo.py  setup.py
tmp/recipe/: meta.yaml
tmp/repo_cli/: _version.py  errors.py
tmp/repo_cli/commands/: admin.py  channel.py  login.py  mirror.py  remove.py
tmp/repo_cli/tests/integration/fixtures/: create_subchannel.json  get_account.json  get_channel_1234.json  get_channel_artifacts.json  get_subchannel_artifacts_conda_numpy.json  lock_channel.json  login.json  tokens_put.json  upload_artifact.json  upload_artifact_subchannel.json
tmp/repo_cli/utils/: __init__.py  api.py  conda.py  format.py  validators.py
