[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-cli"
version = "1.0.25"
description = "Command line interface for Anaconda Server"
requires-python = ">=3.7"
dependencies = ["conda"]

[tools.setuptools]
py_modules=["repo"]

[project.entry-points.conda]
repo = "repo"
